--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.19.1",
     "lucide-react": "^0.475.0",
-    "next": "15.1.7",
+    "next": "^15.4.0-canary.7",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -26,6 +27,7 @@
     "react-slick": "^0.30.3",
     "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.8",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
