--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,13 @@
-
 {
-  "extends": "next",
+  "extends": [
+    "next",
+    "next/core-web-vitals"
+  ],
   "rules": {
     "react/no-unescaped-entities": "off",
-    "@next/next/no-page-custom-font": "off"
+    "@next/next/no-page-custom-font": "off",
+    " quotes": ["error", "double"],   // ✅ Enforce double quotes for JS/JSX
+    "jsx-quotes": ["error", "prefer-double"]
   }
 }
+
